--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ div {
   text-decoration: none;
 }
 
+@media screen and (max-width: 700px) {
+  .navstyle a {
+    padding: 1.5rem;
+    font-size: 1.5rem;
+  }
+}
+
 .navstyle a:hover {
   background-color: cornflowerblue;
   color: white;
