--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ div {
 .button {
   background-color:coral;
   color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 1rem 3rem;
   border-radius: 2rem;
   font-size: 1rem;
